Arrays.asList(..) instead of List.of(..) to avoid Exceptions in case of a null element
Signed-off-by: adarsh0728 <gooneriitk@gmail.com>